Minor Update mi01160909
This update introduces various bug fixes and other feature updates:
Shortened the amount of time needed for the software to initialize;
Added an unfunctional intro screen;
Refined decryption animation so that the software uses less RAM;
Set InitializationProgress.Value to InitializationProgress.Value + 8;
Added Windows Error Logger, log file built into the software itself;
Added Windows Event Logger, check your system manual for more details;
Added a new, unused loading animation;
Other improvements, bug fixes and more.
Expect the first beta release at the end of September.

--- a/WindowsApplication1/Encrypted Device.vbproj
+++ b/WindowsApplication1/Encrypted Device.vbproj
@@ -122,6 +122,10 @@
     <Compile Include="Decryption.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="IntroUI.Designer.vb">
+      <DependentUpon>IntroUI.vb</DependentUpon>
+    </Compile>
+    <Compile Include="IntroUI.vb" />
     <Compile Include="Lost.Designer.vb">
       <DependentUpon>Lost.vb</DependentUpon>
     </Compile>
@@ -154,6 +158,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Decryption.resx">
       <DependentUpon>Decryption.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IntroUI.resx">
+      <DependentUpon>IntroUI.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Lost.resx">
       <DependentUpon>Lost.vb</DependentUpon>
